--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -1,5 +1,5 @@
 .faq {
-  margin-bottom: 120px;
+  margin-bottom: 123px;
 
   @include vp-1439 {
     margin-bottom: 100px;
@@ -12,7 +12,7 @@
 
 .faq__container {
   h2 {
-    margin-bottom: 60px;
+    margin-bottom: 66px;
     font-size: 50px;
     font-weight: 400;
     line-height: 50px;
@@ -37,7 +37,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 20px;
+  // margin-bottom: 20px;
 }
 
 .faq__list {
@@ -46,10 +46,11 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  padding-bottom: 2px;
 }
 
 .faq__item {
-  padding: 40px;
+  padding: 40px 40px 40px;
   color: $color-cerulean-blue;
   background-color: $color-transparent;
   border: 1px solid $color-cerulean-blue;
@@ -64,6 +65,22 @@
 
   @include vp-767 {
     padding: 20px 15px;
+  }
+
+  &:nth-child(4) {
+    padding: 33px 40px 31px;
+
+    .faq__svg-wrapper {
+      margin-top: -14px;
+    }
+  }
+
+  &:nth-child(5) {
+    padding: 32px 40px 32px;
+
+    .faq__svg-wrapper {
+      margin-top: -14px;
+    }
   }
 
   h3 {
@@ -136,6 +153,7 @@
 }
 
 .faq__item.is-active {
+  padding: 37px 40px 32px;
   background-color: $color-cerulean-blue;
 
   h3 {
@@ -144,6 +162,10 @@
 
   p {
     color: $color-alabaster;
+  }
+
+  .faq__title-container {
+    margin-bottom: 13px;
   }
 
   .faq__svg-wrapper {
