--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -21,13 +21,13 @@
 
     @include vp-1439 {
       margin-top: -3px;
-      // margin-bottom: 41px;
       margin-bottom: 38px;
       font-size: 34px;
     }
 
     @include vp-767 {
-      margin-bottom: 30px;
+      margin-top: 0;
+      margin-bottom: 35px;
       font-size: 20px;
       line-height: 20px;
     }
@@ -77,11 +77,19 @@
         margin-top: 2px;
       }
     }
+
+    @include vp-767 {
+      padding: 18px 14px 18px;
+    }
   }
 
   &:nth-child(2) {
     @include vp-1439 {
       padding: 29px 30px 29px;
+    }
+
+    @include vp-767 {
+      padding: 18px 14px 20px;
     }
   }
 
@@ -99,6 +107,10 @@
         margin-top: 0;
       }
     }
+
+    @include vp-767 {
+      padding: 19px 15px 19px 14px;
+    }
   }
 
   &:nth-child(5) {
@@ -114,6 +126,10 @@
       .faq__svg-wrapper {
         margin-top: -1px;
       }
+    }
+
+    @include vp-767 {
+      padding: 19px 14px 17px 14px;
     }
   }
 
@@ -195,6 +211,10 @@
     padding: 29px 29px 24px;
   }
 
+  @include vp-767 {
+    padding: 19px 14px 15px;
+  }
+
   h3 {
     color: $color-default-white;
   }
@@ -212,6 +232,10 @@
 
     @include vp-1439 {
       margin-bottom: 17px;
+    }
+
+    @include vp-767 {
+      margin-bottom: 14px;
     }
   }
 
