--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -30,6 +30,7 @@
     }
 
     @include vp-767 {
+      padding-top: 1px;
       font-size: 20px;
       line-height: 20px;
     }
@@ -58,7 +59,7 @@
   }
 
   @include vp-767 {
-    padding: 30px 0;
+    padding: 30px 0 1px;
   }
 }
 
@@ -87,7 +88,8 @@
     max-width: 290px;
     min-height: 435px;
     gap: 25px;
-    padding: 30px 15px;
+    // padding: 30px 10px 25px 15px;
+    padding: 30px 10px 25px 14px;
   }
 }
 
@@ -98,7 +100,7 @@
 
   @include vp-767 {
     flex-direction: column;
-    gap: 15px;
+    gap: 10px;
     align-items: flex-start;
   }
 }
@@ -114,6 +116,13 @@
 
   @include vp-767 {
     gap: 10px;
+  }
+
+  img {
+    @include vp-767 {
+      width: 60px;
+      height: 60px;
+    }
   }
 }
 
@@ -170,7 +179,7 @@
     color: $color-cerulean-blue;
 
     @include vp-767 {
-      margin-bottom: 8px;
+      margin-bottom: 2px;
     }
   }
 
@@ -207,7 +216,7 @@
     }
 
     @include vp-767 {
-      margin-bottom: 20px;
+      margin-bottom: 14px;
       font-size: 16px;
       line-height: 18px;
     }
