--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -12,14 +12,14 @@
 }
 
 .contacts__container {
-  padding: 120px 100px;
+  padding: 100px 100px 120px;
 
   @include vp-1439 {
-    padding: 100px 45px;
+    padding: 100px 45px 99px;
   }
 
   @include vp-767 {
-    padding: 67px 15px;
+    padding: 67px 15px 68px;
   }
 }
 
@@ -27,20 +27,24 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 40px;
+  padding-bottom: 31px;
   border-bottom: 2px solid;
   border-color: rgb($color-default-white, 0.2);
 
   @include vp-1439 {
     flex-direction: column;
     align-items: flex-start;
-    gap: 30px;
-    padding-bottom: 30px;
+    gap: 12px;
+    padding-bottom: 24px;
   }
 
-  @include vp-767 {}
+  @include vp-767 {
+    gap: 14px;
+    padding-bottom: 21px;
+  }
 
   h2 {
+    // margin-top: -9px;
     font-size: 50px;
     font-weight: 400;
     line-height: 50px;
@@ -59,18 +63,36 @@
 
 .contact__list {
   display: grid;
-  grid-template-columns: 263px 1fr 1fr;
-  gap: 52px;
+  // grid-template-columns: 263px 1fr 1fr;
+  // gap: 52px;
+  grid-template-columns: 290px 1fr 1fr;
+  gap: 26px;
+  padding-top: 18px;
+
+  @include vp-1439 {
+    gap: 62px;
+  }
 
   @include vp-767 {
     grid-template-columns: 1fr;
-    gap: 20px;
+    gap: 14px;
   }
 }
 
 .contacts__item {
+  // margin-left: -26px;
+
+  &:last-child {
+    margin-left: 27px;
+
+    @include vp-767 {
+      margin-left: 0;
+    }
+  }
+
   h3 {
-    margin-bottom: 24px;
+    margin-bottom: 15px;
+    // margin-left: 26px;
     font-size: 12px;
     font-weight: 400;
     line-height: 12px;
@@ -79,15 +101,18 @@
     color: $color-alabaster;
     opacity: 0.8;
 
-    @include vp-1439 {}
+    @include vp-1439 {
+      margin-bottom: 18px;
+    }
 
     @include vp-767 {
-      margin-bottom: 15px;
+      margin-bottom: 8px;
     }
   }
 
   p,
   a {
+    // margin-left: 26px;
     font-size: 16px;
     line-height: 26px;
     color: $color-default-white;
