--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -61,7 +61,7 @@
 .feedback__form-container {
   max-width: 498px;
   min-height: 803px;
-  padding: 70px 74px;
+  padding: 82px 74px 40px;
   background-color: $color-cerulean-blue;
   border-radius: 16px;
 
@@ -79,7 +79,7 @@
   }
 
   h2 {
-    margin-bottom: 17px;
+    margin-bottom: 25px;
     font-size: 32px;
     font-weight: 400;
     line-height: 36px;
@@ -99,7 +99,7 @@
   }
 
   p {
-    margin-bottom: 15px;
+    margin-bottom: 28px;
     font-size: 16px;
     line-height: 26px;
     color: $color-alabaster;
@@ -122,7 +122,7 @@
     margin-bottom: 14px;
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: 10px;
   }
 
   @include vp-1439 {
@@ -164,7 +164,7 @@
 
 .feedback__form {
   form {
-    min-height: 543px;
+    min-height: 539px;
     display: flex;
     flex-direction: column;
 
@@ -231,7 +231,12 @@
   display: flex;
   justify-content: space-between;
   margin: auto 0 0;
-  padding-left: 120px;
+  padding: 4px 4px 4px 106px;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 14px;
+  letter-spacing: 0.28px;
   color: $color-default-white;
   background-color: $color-cerulean-blue;
   border-color: $color-default-white;
@@ -376,6 +381,10 @@
   svg {
     color: $color-default-white;
   }
+}
+
+.feedback__form-select {
+  margin-bottom: 11px;
 }
 
 .feedback__form-label.is-invalid input {
