--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -2,7 +2,7 @@
   margin-bottom: 120px;
 
   @include vp-1439 {
-    margin-bottom: 100px;
+    margin-bottom: 78px;
   }
 
   @include vp-767 {
@@ -11,8 +11,12 @@
 }
 
 .feedback__container {
-  min-height: 803px;
+  // min-height: 802px;
   position: relative;
+
+  @include vp-1439 {
+    // min-height: 780px;
+  }
 
   @include vp-767 {
     padding: 0;
@@ -60,15 +64,15 @@
 
 .feedback__form-container {
   max-width: 498px;
-  min-height: 803px;
-  padding: 82px 74px 40px;
+  min-height: 802px;
+  padding: 82px 74px 39px;
   background-color: $color-cerulean-blue;
   border-radius: 16px;
 
   @include vp-1439 {
     max-width: 442px;
     min-height: 780px;
-    padding: 50px 45px;
+    padding: 62px 45px 50px;
   }
 
   @include vp-767 {
@@ -86,20 +90,20 @@
     color: $color-default-white;
 
     @include vp-1439 {
-      margin-bottom: 35px;
+      margin-bottom: 27px;
       font-size: 28px;
       line-height: 28px;
     }
 
     @include vp-767 {
-      margin-bottom: 26px;
+      margin-bottom: 17px;
       font-size: 18px;
       line-height: 22px;
     }
   }
 
   p {
-    margin-bottom: 28px;
+    margin-bottom: 30px;
     font-size: 16px;
     line-height: 26px;
     color: $color-alabaster;
@@ -111,7 +115,7 @@
     }
 
     @include vp-767 {
-      margin-bottom: 30px;
+      margin-bottom: 26px;
       font-size: 14px;
     }
   }
@@ -123,15 +127,16 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-  }
 
-  @include vp-1439 {
-    line-height: 20px;
-  }
+    @include vp-1439 {
+      line-height: 20px;
+    }
 
-  @include vp-767 {
-    font-size: 12px;
-    line-height: 14px;
+    @include vp-767 {
+      margin-bottom: 22px;
+      font-size: 12px;
+      line-height: 14px;
+    }
   }
 
   span {
@@ -140,6 +145,11 @@
     line-height: 18px;
     color: $color-alabaster;
     opacity: 0.8;
+
+    @include vp-767 {
+      font-size: 12px;
+      line-height: 14px;
+    }
   }
 }
 
@@ -168,13 +178,14 @@
     display: flex;
     flex-direction: column;
 
-    @include vp-1439 {}
+    @include vp-1439 {
+      min-height: 537px;
+    }
 
     @include vp-767 {
-      min-height: 534px;
+      min-height: 528px;
     }
   }
-
 
   input {
     min-height: 50px;
@@ -206,6 +217,10 @@
     border-color: rgb($color-default-white, 0.3);
     border-radius: 8px;
     transition: border-color $trans-default;
+
+    @include vp-767 {
+      min-height: 95px;
+    }
 
     &:hover {
       border-color: rgb($color-default-white, 1);
@@ -246,14 +261,15 @@
     border-color $trans-default;
 
   @include vp-1439 {
-    padding-left: 100px;
+    padding-left: 108px;
   }
 
   @include vp-767 {
     min-width: 260px;
     max-width: 260px;
+    margin: 10px 0 0;
     align-self: center;
-    padding-left: 90px;
+    padding-left: 74px;
     font-size: 12px;
     line-height: 12px;
     letter-spacing: 0.24px;
@@ -315,6 +331,12 @@
   }
 }
 
+.feedback__form-label--textarea {
+  label {
+    margin-bottom: 16px;
+  }
+}
+
 .feedback__custom-checkbox {
   position: absolute;
   width: 20px;
@@ -332,6 +354,10 @@
   transition:
     background-color $trans-default,
     border-color $trans-default;
+
+  @include vp-767 {
+    top: 43%;
+  }
 
   &:hover,
   &:focus {
@@ -385,6 +411,10 @@
 
 .feedback__form-select {
   margin-bottom: 11px;
+
+  @include vp-767 {
+    margin-bottom: 8px;
+  }
 }
 
 .feedback__form-label.is-invalid input {
