--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -2,7 +2,7 @@
   margin-bottom: 120px;
 
   @include vp-1439 {
-    margin-bottom: 78px;
+    margin-bottom: 101px;
   }
 
   @include vp-767 {
@@ -328,6 +328,14 @@
 
   label {
     margin-top: 14px;
+
+    @include vp-1439 {
+      margin-top: 9px;
+    }
+
+    @include vp-767 {
+      margin-top: 14px;
+    }
   }
 }
 
