--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,5 +1,18 @@
 .footer {
   padding-bottom: 60px;
+
+  @include vp-1439 {
+    padding-bottom: 49px;
+  }
+
+  @include vp-767 {
+    max-width: 290px;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    margin: 0 auto;
+    padding-bottom: 61px;
+  }
 }
 
 .footer__container {
@@ -15,11 +28,17 @@
     grid-template-areas:
       "logonav logonav"
       "text socials";
+    row-gap: 21px;
   }
 
   @include vp-767 {
     display: flex;
     flex-direction: column;
+    row-gap: 11px;
+    padding: 0;
+    // margin: 0 auto;
+    min-width: 290px;
+    max-width: 290px;
   }
 }
 
@@ -27,7 +46,7 @@
   grid-area: logonav;
 
   display: flex;
-  gap: 56px;
+  gap: 53px;
   align-items: center;
 
   @include vp-1439 {
@@ -37,7 +56,7 @@
   @include vp-767 {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 13px;
   }
 }
 
@@ -49,11 +68,12 @@
 
   @include vp-1439 {
     flex-direction: column-reverse;
-    gap: 10px;
+    gap: 1px;
   }
 
   @include vp-767 {
     align-items: center;
+    gap: 6px;
   }
 }
 
@@ -72,13 +92,23 @@
   grid-area: socials;
   justify-self: end;
 
+  @include vp-1439 {
+    gap: 10px;
+  }
+
   @include vp-767 {
     order: 2;
+    padding-top: 2px;
   }
 }
 
 .footer__socials svg {
   color: $color-default-white;
+
+  @include vp-767 {
+    width: 11px;
+    height: 11px;
+  }
 }
 
 .footer__socials a {
@@ -90,6 +120,11 @@
   background-color: $color-cerulean-blue;
   border-radius: 50%;
   opacity: 1;
+
+  @include vp-767 {
+    width: 26px;
+    height: 26px;
+  }
 
   &:active {
     background-color: $color-endeavour;
@@ -117,6 +152,7 @@
 }
 
 .footer__copyright span {
+  font-size: 14px;
   line-height: 18px;
   opacity: 0.6;
 
@@ -133,8 +169,8 @@
 }
 
 .footer__policies a {
-  padding-bottom: 2px;
   padding-top: 5px;
+  font-size: 14px;
   line-height: 18px;
   border-bottom: 1px solid;
   border-color: $color-default-black;
